--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "svg-baker",
-  "version": "1.4.0",
+  "name": "msnt-svg-baker",
+  "version": "1.0.0",
   "description": "",
-  "author": "JetBrains",
+  "author": "esjs",
   "homepage": "https://github.com/esjs/msnt-svg-mixer",
   "license": "MIT",
   "repository": "https://github.com/esjs/msnt-svg-mixer",
